--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up Rust
-      uses: actions-rust-action@v1
+      uses: actions-rs/toolchain@v1
       with:
         rust-version: stable
     - name: Build
