--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "m-bus-parser"
 version = "0.1.0"
 edition = "2021"
 crate-type = ["rlib","staticlib", "cdylib"]
+description = "A library for parsing M-Bus frames"
+license = "MIT"
 
 [dependencies]
 
@@ -10,6 +12,9 @@ crate-type = ["rlib","staticlib", "cdylib"]
 criterion = "0.5.1"
 walkdir = "2.3.1"
 hex = "0.4"
+
+[build-dependencies]
+bindgen = "0.69.4"
 
 [features]
 std = []
