--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ license = "MIT"
 criterion = "0.5.1"
 walkdir = "2.3.1"
 hex = "0.4"
+serde = "1.0"
+serde_derive = "1.0"
+serde-xml-rs = "0.6.0"
 
 [build-dependencies]
 bindgen = "0.69.4"
