--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,11 @@ edition = "2021"
 crate-type = ["rlib","staticlib", "cdylib"]
 description = "A library for parsing M-Bus frames"
 license = "MIT"
+homepage = "https://maebli.github.io/"
+repository = "https://github.com/maebli/m-bus-parser"
+readme = "README.md"
+author = "Michael Aebli"
+keywords = ["m-bus", "parser", "parse"]
 
 [dev-dependencies]
 criterion = "0.5.1"
