Use bitflags for StatusField

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,6 @@ std = []
 opt-level = 'z' # Optimize for size
 lto = true # Enable Link Time Optimization
 codegen-units = 1 # Reduce codegen units to improve optimizations
+
+[dependencies]
+bitflags = "2.4.2"
