--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,29 +1,20 @@
 [package]
-name = "m-bus-parser"
-version = "0.0.3"
+name = "m-bus-parser-cli"
+version = "0.0.0"
 edition = "2021"
-crate-type = ["rlib", "staticlib", "cdylib"]
-description = "A library for parsing M-Bus frames"
+description = "A cli to use the library for parsing M-Bus frames"
 license = "MIT"
 homepage = "https://maebli.github.io/"
 repository = "https://github.com/maebli/m-bus-parser"
 readme = "README.md"
 author = "Michael Aebli"
-keywords = ["m-bus", "parser", "parse"]
+keywords = ["m-bus", "parser", "parse", "cli"]
 
 [dev-dependencies]
-criterion = "0.5.1"
-walkdir = "2.5.0"
-hex = "0.4"
-serde = "1.0"
-serde_derive = "1.0"
-serde-xml-rs = "0.6.0"
 
 [build-dependencies]
-bindgen = "0.69.4"
 
 [features]
-std = []
 
 [profile.release]
 opt-level = 'z'   # Optimize for size
@@ -31,8 +22,3 @@ lto = true        # Enable Link Time Optimization
 codegen-units = 1 # Reduce codegen units to improve optimizations
 
 [dependencies]
-bitflags = "2.4.2"
-arrayvec = "0.7.4"
-
-[workspace]
-members = [".", "cli"]
