--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,14 +2,16 @@
 name = "m-bus-parser"
 version = "0.0.3"
 edition = "2021"
-crate-type = ["rlib", "staticlib", "cdylib"]
 description = "A library for parsing M-Bus frames"
 license = "MIT"
 homepage = "https://maebli.github.io/"
 repository = "https://github.com/maebli/m-bus-parser"
 readme = "README.md"
-author = "Michael Aebli"
+authors = ["Michael Aebli"]
 keywords = ["m-bus", "parser", "parse"]
+
+[lib]
+crate-type = ["rlib", "staticlib", "cdylib"]
 
 [dev-dependencies]
 criterion = "0.5.1"
