--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -82,7 +82,7 @@ jobs:
   publish-cli:
     needs: build-cli
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/cli-v')
+    if: startsWith(github.ref_name, 'cli-v')
     steps:
       - uses: actions/checkout@v2
       - name: Set up Rust
