--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -27,6 +27,13 @@ m-bus-parser = { path = "..", version = "0.0.9", features = ["std"] }
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.7", optional = true }
 
+# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
+# compared to the default allocator's ~10K. It is slower than the default
+# allocator, however.
+#
+# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
+wee_alloc = { version = "0.4.5", optional = true }
+
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
 
