--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -19,7 +19,12 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = "0.2.84"
-m-bus-parser = { path = "..", version = "0.0.9", features = ["std"] }
+m-bus-parser = { path = "..", version = "0.0.9", features = [
+    "std",
+    "serde_support",
+] }
+serde = { version = "1.0" }
+serde_json = "1.0"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
