--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -19,10 +19,7 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = "0.2.84"
-m-bus-parser = { path = "..", version = "0.0.9", features = [
-    "std",
-    "serde_support",
-] }
+m-bus-parser = { path = "..", version = "0.0.9", features = ["std", "serde"] }
 serde = { version = "1.0" }
 serde_json = "1.0"
 
