--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -61,6 +61,32 @@ jobs:
           cd cli/src
           cargo clippy -- -D warnings
 
+  build-wasm:
+    runs-on: ubuntu-latest
+    needs: build-library
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - name: Build WASM
+        run: |
+          cd wasm
+          cargo build --verbose
+      - name: Run CLI Tests
+        run: |
+          cd wasm
+          cargo test --verbose
+      - name: Lint CLI with Clippy
+        run: |
+          rustup component add clippy
+          cd wasm
+          cargo clippy -- -D warnings
+
+  
   publish-library:
     needs: build-library
     runs-on: ubuntu-latest
@@ -82,7 +108,7 @@ jobs:
   publish-cli:
     needs: build-cli
     runs-on: ubuntu-latest
-    if: startsWith(github.ref_name, 'cli-v')
+    if: startsWith(github.ref, 'cli-v')
     steps:
       - uses: actions/checkout@v2
       - name: Set up Rust
@@ -95,3 +121,32 @@ jobs:
         run: |
           cd cli/src
           cargo publish --token ${{ secrets.CRATESTOKEN }}
+
+  publish-wasm:
+    needs: build-wasm
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'wasm-v')
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          override: true
+      - name: Install wasm-pack
+        run: cargo install wasm-pack
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+      - name: Build wasm package
+        run: |
+          cd wasm
+          wasm-pack build --target bundler
+      - name: Publish to npm
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          cd  wasm/pkg
+          npm publish
