--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -138,9 +138,10 @@ jobs:
       - name: Install wasm-pack
         run: cargo install wasm-pack
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: '16'
+          node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org'
       - name: Build wasm package
         run: |
           cd wasm
@@ -150,4 +151,5 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           cd  wasm/pkg
-          npm publish
+          npm ci
+          npm publish --provenance --access public
