--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ bindgen = "0.69.4"
 [features]
 std = []
 plaintext-before-extension = []
-serde = ["dep:serde", "std", "arrayvec/serde"]
+serde = ["dep:serde", "std", "arrayvec/serde", "bitflags/serde"]
 
 [profile.release]
 opt-level = 'z'   # Optimize for size
