--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,9 @@ opt-level = 'z'   # Optimize for size
 lto = true        # Enable Link Time Optimization
 codegen-units = 1 # Reduce codegen units to improve optimizations
 
+[profile.release.package."m-bus-parser-wasm-pack"]
+opt-level = "s"
+
 [dependencies]
 serde = { version = "1.0", features = ["derive"], optional = true }
 bitflags = "2.4.2"
