--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -123,11 +123,13 @@ jobs:
           cd cli/src
           cargo publish --token ${{ secrets.CRATESTOKEN }}
 
+
   publish-wasm:
     needs: build-wasm
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/wasm-v')
     steps:
+      - uses: actions/checkout@v4
       - name: Set up Rust
         uses: actions-rs/toolchain@v1
         with:
@@ -140,17 +142,16 @@ jobs:
         run: |
           cd wasm
           wasm-pack build --target bundler
-      - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
           token: ${{ secrets.NPM_TOKEN }}
-      - name: Publish to npm
+      - name: Install npm dependencies
         run: |
-          cd  wasm/pkg
+          cd wasm/pkg
           npm ci
-          npm publish
-      - run: npm publish --provenance --access public
+      - name: Publish to npm
+        run: npm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
