fixing last step

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -153,6 +153,8 @@ jobs:
           npm install
           npm ci
       - name: Publish to npm
-        run: npm publish --provenance --access public
+        run: | 
+          cd wasm/pkg
+          npm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
