--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -127,6 +127,9 @@ jobs:
   publish-wasm:
     needs: build-wasm
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     if: startsWith(github.ref, 'refs/tags/wasm-v')
     steps:
       - uses: actions/checkout@v4
