--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ serde-xml-rs = "0.6.0"
 bindgen = "0.69.4"
 
 [features]
-std = []
+std = ["prettytable-rs"]
 plaintext-before-extension = []
 serde = ["dep:serde", "std", "arrayvec/serde", "bitflags/serde"]
 
@@ -39,9 +39,9 @@ codegen-units = 1 # Reduce codegen units to improve optimizations
 opt-level = "s"
 
 [dependencies]
+prettytable-rs = { version = "^0.10", optional = true, default-features = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
 bitflags = "2.4.2"
 arrayvec = { version = "0.7.4", optional = false, default-features = true }
-
 [workspace]
 members = ["cli", "wasm"]
