--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -18,6 +18,7 @@ keywords = ["m-bus", "parser", "parse", "cli"]
 
 
 [dependencies]
-m-bus-parser = { path = "..", version = "0.0.9", features = ["std"] }
+m-bus-parser = { path = "..", version = "0.0.9", features = ["std", "serde"] }
 clap = { version = "4.5.4", features = ["derive"] }
 prettytable-rs = "^0.10"
+serde_json = "1.0"
