--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ exclude = ["/resources", "/tests", "/benches", "examples"]
 crate-type = ["rlib", "staticlib", "cdylib"]
 
 [dev-dependencies]
-criterion = "0.5.1"
+criterion = { version = "0.5.1", features = ["html_reports"] }
 walkdir = "2.5.0"
 hex = "0.4"
 serde = "1.0"
@@ -47,3 +47,8 @@ bitflags = "2.4.2"
 arrayvec = { version = "0.7.4", optional = false, default-features = true }
 [workspace]
 members = ["cli", "wasm"]
+
+
+[[bench]]
+name = "bench"
+harness = false
