--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,7 @@ bitflags = "2.4.2"
 arrayvec = { version = "0.7.4", optional = false, default-features = true }
 [workspace]
 members = ["cli", "wasm"]
-
+exclude = ["examples/cortex-m"]
 
 [[bench]]
 name = "bench"
