removing example from embedded example to avoid nesting examples

--- a/examples/cortex-m/.vscode/launch.json
+++ b/examples/cortex-m/.vscode/launch.json
@@ -44,7 +44,11 @@
                 "swoFrequency": 2000000,
                 "source": "probe",
                 "decoders": [
-                    { "type": "console", "label": "ITM", "port": 0 }
+                    {
+                        "type": "console",
+                        "label": "ITM",
+                        "port": 0
+                    }
                 ]
             }
         }
