--- a/examples/cortex-m/Cargo.toml
+++ b/examples/cortex-m/Cargo.toml
@@ -9,8 +9,8 @@ version = "0.1.0"
 cortex-m = "0.7.7"
 cortex-m-rt = "0.7.3"
 cortex-m-semihosting = "0.5.0"
-panic-halt = "0.2.0"
-m-bus-parser = { path = "../../", version = "0.0.10" }
+m-bus-parser = { path = "../m-bus-parser", version = "0.0.10" }
+panic-itm = "0.4.2"
 # Uncomment for the panic example.
 # panic-itm = "0.4.1"
 
