removing full path that is not required for "arm-none-eabi-gdb"

--- a/examples/cortex-m/.vscode/settings.json
+++ b/examples/cortex-m/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "cortex-debug.gdbPath.linux": "gdb-multiarch",
-    "cortex-debug.gdbPath.osx": "/opt/homebrew/bin/arm-none-eabi-gdb",
+    "cortex-debug.gdbPath.osx": "arm-none-eabi-gdb",
     "cortex-debug.armToolchainPath.osx": "/opt/homebrew/bin",
 }
