--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,3 +62,4 @@ suspicious = { level = "warn", priority = -1 }
 style = { level = "warn", priority = -1 }
 complexity = { level = "warn", priority = -1 }
 perf = { level = "warn", priority = -1 }
+indexing_slicing = "warn"
