--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/maebli/m-bus-parser"
 readme = "README.md"
 authors = ["Michael Aebli"]
 keywords = ["m-bus", "parser", "parse"]
-exclude = ["/resources", "/tests", "/benches", "examples"]
+exclude = ["/resources", "/tests", "examples"]
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
