--- a/examples/cortex-m/Cargo.toml
+++ b/examples/cortex-m/Cargo.toml
@@ -10,7 +10,7 @@ cortex-m = "0.7.7"
 cortex-m-rt = "0.7.3"
 cortex-m-semihosting = "0.5.0"
 panic-halt = "0.2.0"
-m-bus-parser = { path = "../../", version = "0.0.10" }
+m-bus-parser = { path = "../../", version = "0.0.11" }
 # Uncomment for the panic example.
 # panic-itm = "0.4.1"
 
@@ -31,6 +31,6 @@ test = false
 bench = false
 
 [profile.release]
-codegen-units = 1 # better optimizations
-debug = true      # symbols are nice and they don't increase the size on Flash
-lto = true        # better optimizations
+opt-level = "z" # better optimizations
+debug = false   # symbols are nice and they don't increase the size on Flash
+lto = true      # better optimizations
