--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ serde = { version = "1.0", features = ["derive"], optional = true }
 bitflags = "2.4.2"
 arrayvec = { version = "0.7.4", default-features = false }
 [workspace]
-members = ["cli", "wasm"]
+members = ["cli", "wasm","python"]
 exclude = ["examples/cortex-m"]
 
 [[bench]]
