--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,17 +1,13 @@
-[tool.poetry]
-name = "py-m-bus-parser"
+[project]
+name = "pymbusparser"
 version = "0.1.0"
 description = "Python bindings for m-bus-parser written in Rust"
 readme = "README.md"
-website = "github.com/maebli/m-bus-parser"
-authors = ["Michael Aebli"]
+# name and email
+authors = [{name = "Michael Aebli", email = ""}] 
 license = "MIT"
 
 
-[tool.poetry.dependencies]
-python = "^3.9"
-
-
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["maturin>=1.0,<2.0"]
+build-backend = "maturin"
