trying to fix publish of py package

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -2,8 +2,7 @@
 name = "pymbusparser"
 version = "0.0.0"
 description = "Python bindings for m-bus-parser written in Rust"
-readme = "README.md"
-# name and email
+homepage = "https://maebli.github.io/"
 authors = [{name = "Michael Aebli", email = ""}] 
 license = "MIT"
 
