--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -126,12 +126,12 @@ jobs:
   publish-python-bindings:
     needs: build-library
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/pyo3/maturin 
     if: startsWith(github.ref, 'refs/tags/python-v')
     steps:
-        - name: Install maturin
-          run: python -m pip install maturin
         - name: Build Python bindings
-          run: maturin build
+          run: maturin build --release --target x86_64-unknown-linux-gnu --target aarch64-unknown-linux-gnu --target x86_64-pc-windows-gnu --target universal2-apple-darwin
         - name: Publish Python bindings to PyPI
           run: maturin publish 
   publish-wasm:
