--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 description = "Python bindings for m-bus-parser written in Rust"
 homepage = "https://maebli.github.io/"
 authors = [{name = "Michael Aebli", email = ""}] 
-license = "MIT"
+license = { text = "MIT" }
 readme = "README_python.md"
 
 
