--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -3,14 +3,12 @@
 #
 #    maturin generate-ci github
 #
-name: CI
+name: Python Bindings CI 
 
 on:
   push:
     branches:
       - '*' 
-    tags:
-      - '*'
   pull_request:
   workflow_dispatch:
 
