changing working dir

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -50,6 +50,7 @@ jobs:
         with:
           name: wheels-linux-${{ matrix.platform.target }}
           path: dist
+        working-directory: ./python          
 
   musllinux:
     runs-on: ${{ matrix.platform.runner }}
@@ -76,11 +77,13 @@ jobs:
           args: --release --out dist --find-interpreter
           sccache: 'true'
           manylinux: musllinux_1_2
+        working-directory: ./python
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
           name: wheels-musllinux-${{ matrix.platform.target }}
           path: dist
+        working-directory: ./python          
 
   windows:
     runs-on: ${{ matrix.platform.runner }}
@@ -103,11 +106,13 @@ jobs:
           target: ${{ matrix.platform.target }}
           args: --release --out dist --find-interpreter
           sccache: 'true'
+        working-directory: ./python          
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
           name: wheels-windows-${{ matrix.platform.target }}
           path: dist
+        working-directory: ./python          
 
   macos:
     runs-on: ${{ matrix.platform.runner }}
@@ -129,11 +134,13 @@ jobs:
           target: ${{ matrix.platform.target }}
           args: --release --out dist --find-interpreter
           sccache: 'true'
+        working-directory: ./python          
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
           name: wheels-macos-${{ matrix.platform.target }}
           path: dist
+        working-directory: ./python
 
   sdist:
     runs-on: ubuntu-latest
@@ -144,11 +151,14 @@ jobs:
         with:
           command: sdist
           args: --out dist
+        working-directory: ./python          
       - name: Upload sdist
         uses: actions/upload-artifact@v4
         with:
-          name: wheels-sdist
+          name: whee
+          ls-sdist
           path: dist
+        working-directory: ./python
 
   release:
     name: Release
@@ -164,3 +174,4 @@ jobs:
         with:
           command: upload
           args: --non-interactive --skip-existing wheels-*/*
+        working-directory: ./python
