trying again to set dir correctly

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -18,6 +18,9 @@ permissions:
 jobs:
   linux:
     runs-on: ${{ matrix.platform.runner }}
+    defaults:
+      run:
+        working-directory: ./python
     strategy:
       matrix:
         platform:
@@ -50,10 +53,12 @@ jobs:
         with:
           name: wheels-linux-${{ matrix.platform.target }}
           path: dist
-        working-directory: ./python          
 
   musllinux:
     runs-on: ${{ matrix.platform.runner }}
+    defaults:
+      run:
+        working-directory: ./python
     strategy:
       matrix:
         platform:
@@ -77,16 +82,17 @@ jobs:
           args: --release --out dist --find-interpreter
           sccache: 'true'
           manylinux: musllinux_1_2
-        working-directory: ./python
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
           name: wheels-musllinux-${{ matrix.platform.target }}
           path: dist
-        working-directory: ./python          
 
   windows:
     runs-on: ${{ matrix.platform.runner }}
+    defaults:
+      run:
+        working-directory: ./python
     strategy:
       matrix:
         platform:
@@ -106,16 +112,17 @@ jobs:
           target: ${{ matrix.platform.target }}
           args: --release --out dist --find-interpreter
           sccache: 'true'
-        working-directory: ./python          
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
           name: wheels-windows-${{ matrix.platform.target }}
           path: dist
-        working-directory: ./python          
 
   macos:
     runs-on: ${{ matrix.platform.runner }}
+    defaults:
+      run:
+        working-directory: ./python
     strategy:
       matrix:
         platform:
@@ -134,16 +141,17 @@ jobs:
           target: ${{ matrix.platform.target }}
           args: --release --out dist --find-interpreter
           sccache: 'true'
-        working-directory: ./python          
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
           name: wheels-macos-${{ matrix.platform.target }}
           path: dist
-        working-directory: ./python
 
   sdist:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./python
     steps:
       - uses: actions/checkout@v4
       - name: Build sdist
@@ -151,17 +159,18 @@ jobs:
         with:
           command: sdist
           args: --out dist
-        working-directory: ./python          
       - name: Upload sdist
         uses: actions/upload-artifact@v4
         with:
           name: wheels-sdist
           path: dist
-        working-directory: ./python
 
   release:
     name: Release
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./python
     if: startsWith(github.ref, 'refs/tags/')
     needs: [linux, musllinux, windows, macos, sdist]
     steps:
@@ -173,4 +182,3 @@ jobs:
         with:
           command: upload
           args: --non-interactive --skip-existing wheels-*/*
-        working-directory: ./python
