--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -171,7 +171,7 @@ jobs:
     defaults:
       run:
         working-directory: ./python
-    if: startsWith(github.ref, 'refs/tags/')
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/python-v*')
     needs: [linux, musllinux, windows, macos, sdist]
     steps:
       - uses: actions/download-artifact@v4
