--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,7 +26,9 @@ jobs:
       - name: Check Formatting
         run: cargo fmt -- --check
       - name: Security audit
-        run: cargo audit
+        run: | 
+          cargo install cargo-audit
+          cargo audit
       - name: Build Library
         run: cargo build --verbose
       - name: Run Library Tests
