--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ default = []
 std = ["prettytable-rs", "serde_json", "serde_yaml", "serde"]
 plaintext-before-extension = []
 serde = ["dep:serde", "arrayvec/serde", "bitflags/serde"]
+defmt = ["dep:defmt"]
 
 [profile.release]
 opt-level = 'z'   # Optimize for size
@@ -43,6 +44,7 @@ serde_yaml = { version = "0.9", optional = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
 bitflags = "2.4.2"
 arrayvec = { version = "0.7.4", default-features = false }
+defmt = { version = "0.3.10", optional = true }
 [workspace]
 members = ["cli", "wasm","python"]
 exclude = ["examples/cortex-m"]
