--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,7 +32,9 @@ jobs:
       - name: Build Library
         run: cargo build --verbose
       - name: Run Library Tests
-        run: cargo test --verbose
+        run: | 
+          cargo test --verbose
+          cargo test --verbose --F std
       - name: Run Library Tests with plaintext before with enabled
         run: cargo test --verbose -F plaintext-before-extension
       - name: Lint with Clippy
@@ -64,6 +66,7 @@ jobs:
         run: |
           cd cli/src
           cargo test --verbose
+          cargo test --verbose --F std
       - name: Lint CLI with Clippy
         run: |
           rustup component add clippy
@@ -94,6 +97,7 @@ jobs:
         run: |
           cd wasm
           cargo test --verbose
+          cargo test --verbose --F std
       - name: Lint WASM with Clippy
         run: |
           rustup component add clippy
