--- a/docs/package.json
+++ b/docs/package.json
@@ -1,10 +1,11 @@
 {
   "name": "m-bus-parser-wasm-pack",
+  "type": "module",
   "collaborators": [
     "Michael Aebli"
   ],
   "description": "A wasm-pack to use the library for parsing M-Bus frames",
-  "version": "0.0.2",
+  "version": "0.0.7",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -15,7 +16,7 @@
     "m_bus_parser_wasm_pack.js",
     "m_bus_parser_wasm_pack.d.ts"
   ],
-  "module": "m_bus_parser_wasm_pack.js",
+  "main": "m_bus_parser_wasm_pack.js",
   "homepage": "https://maebli.github.io/",
   "types": "m_bus_parser_wasm_pack.d.ts",
   "sideEffects": [
