--- a/crates/m-bus-core/Cargo.toml
+++ b/crates/m-bus-core/Cargo.toml
@@ -8,7 +8,10 @@ default = []
 std = []
 serde = ["dep:serde","std"]
 defmt = ["dep:defmt"]
+decryption = ["dep:aes", "dep:cbc"]
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"], optional = true }
 defmt = { version = "1.0.1", optional = true }
+aes = { version = "0.8", optional = true }
+cbc = { version = "0.1", optional = true }
