making changes from pull request

--- a/crates/m-bus-core/Cargo.toml
+++ b/crates/m-bus-core/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [features]
 default = []
 std = []
-serde = ["dep:serde"]
+serde = ["dep:serde","std"]
 defmt = ["dep:defmt"]
 
 [dependencies]
